<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_fiber_new"
            android:title="@string/menu_news" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_event"
            android:title="@string/menu_events" />
        <item
            android:id="@+id/nav_notice"
            android:icon="@drawable/ic_notifications"
            android:title="@string/menu_notice" />
        <item
            android:id="@+id/nav_upload"
            android:icon="@drawable/ic_file_upload"
            android:title="@string/menu_upload" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/ic_feedback"
                android:title="@string/menu_feedback" />
        </menu>
    </item>

</menu>
