<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/colorTextBlack"
            android:textSize="24sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/img_dialog_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/image_desc"
            android:minWidth="110dp"
            android:minHeight="110dp"
            app:srcCompat="@mipmap/ic_mylauncher_foreground" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_dialog_genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_margin="4dp"
                android:layout_toStartOf="@+id/txt_dialog_date"
                android:text="@string/genre"
                android:textColor="@color/colorTextBlack"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/txt_dialog_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="4dp"
                android:layout_marginStart="4dp"
                android:text="@string/date"
                android:textColor="@color/colorTextBlack"
                android:textSize="14sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/txt_dialog_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:accessibilityHeading="false"
            android:gravity="center"
            android:text="@string/desc"
            android:textColor="@color/colorTextBlack"
            android:textSize="18sp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>